--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     plan: free
     env: docker
     dockerfilePath: Dockerfile
-    repo: https://github.com/krishan041/Drm-bot
+    repo: https://github.com/krishan041/DRM-Bot-2
     branch: main
     autoDeploy: false
     envVars:
